<resources>
    <string name="app_name">Movesense</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_scanButton">Search Devices</string>
    <string name="scan_title">Choose device from list</string>
    <string name="parameters_title">Choose measurement parameters</string>
    <string name="parameters_column_parameter">Parameter</string>
    <string name="parameters_column_choice">Choice</string>
    <string name="parameters_column_measurement_interval" >Measurement interval</string>
    <string name="parameters_parameter_temperature">Temperature</string>
    <string name="parameters_parameter_battery_level">Battery level</string>
    <string name="parameters_parameter_linear_acceleration">Linear acceleration</string>
    <string name="parameters_parameter_gyroscope">Gyroscope</string>
    <string name="parameters_parameter_magnetometer">Magnetometer</string>
    <string name="parameters_parameter_heart_rate">Heart rate</string>
    <string name="parameters_parameter_ecg">ECG</string>
    <string name="parameteres_parameter_start_button">Start measurement</string>
    <string name="configuration_title">Choose SaMi details</string>
    <string name="configuration_sami_writekey_help">Writekey</string>
    <string name="configuration_sami_object_help">Object name</string>
    <string name="configuration_sami_tag_help">Measurement note</string>
    <string name="configuration_choose_button">Confirm SaMi details</string>
    <string name="collector_title">Measurement in progress</string>
    <string name="collector_cancel_button">Stop measurement</string>
    <string name="parameters_parameter_start_button_on_progress">Stop Measurement</string>
    <string name="parameters_parameter_title_on_progress">Measurement is in progress</string>
    <string name="loading_title">Please wait!</string>
    <string name="connecting_message">Connecting to the device</string>
    <string name="scan_help">Press and hold to select device</string>
    <string name="unsubscribe_message">Stopping measurement</string>
    <string name="measurement_success">Measurement sent successfully</string>
    <string name="measurement_occured_error">Error ocurred while sending measurements</string>
    <string name="configuration_send_interval_help">Send interval</string>
    <string name="notification_bluetooth_must_be_on">Bluetooth is required to use the application</string>
    <string name="notification_location_is_required">Location permission is required to scan bluetooth devices</string>
    <string name="notification_movesense_disconnect">Disconnected from the device!</string>
    <string name="notification_movesense_error">Error occurred with the movesense device</string>
    <string name="bluetooth_error_0">Scan did not start correctly because of unspecified error.</string>
    <string name="bluetooth_error_1">Scan did not start correctly because the Bluetooth adapter was disabled.</string>
    <string name="bluetooth_error_2">Scan did not start correctly because the device does not support it.</string>
    <string name="bluetooth_error_3">Scan did not start correctly because the user did not accept access to location services.</string>
    <string name="bluetooth_error_4">Scan did not start because location services are disabled on the device.</string>
    <string name="bluetooth_error_5">Fails to start scan as BLE scan with the same settings is already started by the app.</string>
    <string name="bluetooth_error_6">Fails to start scan as app cannot be registered.</string>
    <string name="bluetooth_error_7">Fails to start scan due an internal error.</string>
    <string name="bluetooth_error_8">Fails to start power optimized scan as this feature is not supported.</string>
    <string name="bluetooth_error_9">Fails to start scan as it is out of hardware resources.</string>
    <string name="bluetooth_error_undocumented_scan_throttle">Scan throttle : 5 scans were started by the app during a 30 second window</string>
</resources>
